# vyatta-anyfi-gateway

./: AUTHORS  Makefile.am  README  README.md  configure.ac
debian/: README  changelog  control  copyright  rules
scripts/: vyatta-anyfi-gateway.pl
templates-cfg/service/anyfi/: node.def
templates-cfg/service/anyfi/gateway/: node.def
templates-cfg/service/anyfi/gateway/node.tag/accounting/: node.def
templates-cfg/service/anyfi/gateway/node.tag/authorization/: node.def
templates-cfg/service/anyfi/gateway/node.tag/bridge/: node.def
templates-cfg/service/anyfi/gateway/node.tag/controller/: node.def
templates-cfg/service/anyfi/gateway/node.tag/ft/: node.def
templates-cfg/service/anyfi/gateway/node.tag/isolation/: node.def
templates-cfg/service/anyfi/gateway/node.tag/local-ap/: node.def
templates-cfg/service/anyfi/gateway/node.tag/nas/: node.def
templates-cfg/service/anyfi/gateway/node.tag/optimize/: node.def
templates-cfg/service/anyfi/gateway/node.tag/port-range/: node.def
templates-cfg/service/anyfi/gateway/node.tag/security/: node.def
templates-cfg/service/anyfi/gateway/node.tag/ssid/: node.def
templates-cfg/service/anyfi/gateway/node.tag/strict-rekey/: node.def
templates-op/restart/anyfi/: node.def
templates-op/restart/anyfi/gateway/: node.def
templates-op/restart/anyfi/gateway/node.tag/: node.def
templates-op/show/anyfi/: node.def
templates-op/show/anyfi/gateway/: node.def
templates-op/show/anyfi/gateway/license/: node.def
templates-op/show/anyfi/gateway/node.tag/: node.def
templates-op/show/log/anyfi-gateway/: node.def
(+57 files in other folders)
